# demo_siemens_to_web

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  zellij.kdl
api/: Cargo.toml
api/src/: app.rs  main.rs  state.rs
api/src/routes/: value.rs
api/tests/: route_value.rs
doc/: description.md  diagram.puml
libraries/opcua-client-lib/: Cargo.toml
libraries/redis-client/: Cargo.toml
libraries/redis-client/examples/: example_pub.rs  example_sub.rs  example_sub_async.rs
libraries/redis-client/src/: redis_pub_async.rs  redis_sub_async.rs
libraries/webapp-lib/: Cargo.toml
libraries/webapp-lib/src/: lib.rs
libraries/webapp-lib/src/components/: state.rs
libraries/websocket-lib/: Cargo.toml
libraries/websocket-lib/src/: errors.rs  load_all_messages_from_hash.rs
libraries/websocket-lib/src/tasks/: main.rs
logging/src/: lib.rs  logging.rs
logs/: log.2023-08-30-16
messages/: Cargo.toml
messages/src/: lib.rs  messages.rs
messages/src/types/: mod.rs  simple_value.rs  single_value.rs
opcua-client/: Cargo.toml  README.md
opcua-client/src/: create_session.rs  errors.rs  lib.rs  log_init.rs  main.rs  publish.rs  subscribe.rs  test.json  write.rs
opcua-client/src/convert/: datetime_to_chrono.rs  mod.rs  variant_to_i16.rs
pki/own/: cert.der
pki/private/: private.pem
redis-client/: Cargo.toml  README.md
redis-client/examples/: example1.rs  example_pub.rs  example_sub.rs
redis-client/src/: errors.rs  lib.rs  redis_hash.rs  redis_hash_async.rs  redis_hash_async_stub.rs  redis_hash_sync.rs  redis_pub_sync.rs  redis_sub.rs  redis_sub_sync.rs
redis-client/tests/: test1.rs
services/api/: Cargo.toml
services/api-ws/: Cargo.toml  README.md
services/api-ws/src/: errors.rs  lib.rs  load_all_messages_from_hash.rs  main.rs
services/api-ws/src/tasks/: main.rs
services/api/src/: main.rs
services/api/tests/: route_value.rs
services/db-saver/: Cargo.toml
services/db-saver/src/: config.rs  main.rs
services/db_saver/: Cargo.toml
services/db_saver/src/: main.rs
services/grafana/datasources/: loki.yaml
services/opcua-client/: Cargo.toml
services/opcua-client/src/: config.rs  main.rs
services/webapp/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
services/webapp/src/: api.rs  define_window_url.rs  global_navigation.rs  global_state.rs  lib.rs  log.rs  main.rs  shell copy.rs
services/websocket/: Cargo.toml
services/websocket/src/: main.rs
services/websocket/src/tasks/: handle_ws_connection.rs  listen_port.rs
utils/env_vars/: Cargo.toml  README.md
utils/env_vars/src/: config.rs  create_env_file.rs  errors.rs  lib.rs  main.rs
utils/logging/src/: config.rs  lib.rs
utils/messages/src/: config.rs
utils/messages/src/types/: command.rs  single_value.rs
webapp/: Cargo.toml  README.md  index.html
webapp/src/: log.rs  main.rs
