[workspace]
members = ["api", "messages", "opcua-client", "redis-client", "webapp"]
resolver = "2"


[workspace.dependencies]
axum = { version = "0.6" }
axum-test = { version = "12.2" }
chrono = { version = "0.4", features = ["serde"] }
gloo = { version = "0.10", features = ["console", "net"] }
leptos = { version = "0.5.0-beta", features = ["csr", "tracing"] }
opcua = { version = "0.11", features = ["client"] }
redis = { version = "0.23.2", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tower-http = { version = "0.4", features = ["cors"] }
tracing = { version = "0.1" }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }

messages = { path = "./messages" }
redis-client = { path = "./redis-client" }

# dev-dependencies
ntest = { version = "0.9" }
