[workspace]
members = [
    "api",
    "logging",
    "messages",
    "opcua-client",
    "redis-client",
    "services/db_saver",
    "utils/env_vars",
    "webapp",
]
resolver = "2"


[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
opcua = { version = "0.11", features = ["client"] }
redis = { version = "0.23.2", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }

# api
axum = { version = "0.6" }
axum-test = { version = "12.2" }
tower-http = { version = "0.4", features = ["cors"] }

# wasm
gloo = { version = "0.10", features = ["console", "net"] }
leptos = { version = "0.5.0-beta2", features = ["csr", "tracing"] }

# логгирование
tracing = { version = "0.1" }
tracing-loki = { version = "0.2" }
tracing-subscriber = { version = "0.3" }

# сериализация / десериализация
dotenvy = { version = "0.15" }
envy = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.7" }
url = { version = "2.4", features = ["serde"] }

# мои пакеты
logging = { path = "./logging" }
messages = { path = "./messages" }
redis-client = { path = "./redis-client" }
env_vars = { path = "./utils/env_vars" }

# dev-dependencies
ntest = { version = "0.9" }
