[workspace]
members = [
    "libraries/db-saver-lib",
    "libraries/opcua-client-lib",
    "libraries/redis-client",
    "libraries/webapp-lib",
    "services/api",
    "services/api-ws",
    "services/db-saver",
    "services/opcua-client",
    "services/webapp",
    "utils/env_vars",
    "utils/logging",
    "utils/messages",
]
resolver = "2"


[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
opcua = { version = "0.11", features = ["client"] }
redis = { version = "0.23.2", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
# для асинхронной подписки PubSub в Redis
futures-util = { version = "0.3" }
sqlx = { version = "0.7", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
] }

# api
axum = { version = "0.6" }
axum-test = { version = "12.2" }
tower-http = { version = "0.4", features = ["cors"] }
tokio-tungstenite = { version = "0.20" }

# wasm
gloo = { version = "0.10", features = ["console", "net", "utils"] }
leptos = { version = "0.5.0-beta2", features = ["csr", "tracing"] }
web-sys = { version = "0.3", features = ["Location", "Window"] }

# логгирование
tracing = { version = "0.1" }
tracing-loki = { version = "0.2" }
tracing-subscriber = { version = "0.3" }

# сериализация / десериализация
dotenvy = { version = "0.15" }
envy = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.7" }
url = { version = "2.4", features = ["serde"] }

# мои пакеты
db-saver-lib = { path = "./libraries/db-saver-lib" }
opcua-client-lib = { path = "./libraries/opcua-client-lib" }
redis-client = { path = "./libraries/redis-client" }
webapp-lib = { path = "./libraries/webapp-lib" }
env_vars = { path = "./utils/env_vars" }
logging = { path = "./utils/logging" }
messages = { path = "./utils/messages" }

# dev-dependencies
ntest = { version = "0.9" }
