[package]
name = "api"
version = "0.0.1"
edition = "2021"


[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
# мои пакеты
messages = { workspace = true }
redis-client = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
