[package]
name = "opcua-client"
version = "0.0.1"
edition = "2021"


[dependencies]
chrono = { workspace = true }
opcua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-loki = { workspace = true }

messages = { path = "../messages" }
redis-client = { path = "../redis-client" }
