[package]
name = "api-ws"
version = "0.0.1"
edition = "2021"

[dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
redis-client = { workspace = true }
