[package]
name = "opcua-client"
version = "0.0.1"
edition = "2021"


[dependencies]
chrono = { workspace = true }
opcua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

logging = { workspace = true }
messages = { workspace = true }
redis-client = { workspace = true }
env_vars = { workspace = true }
